{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 188,
  "lineage": "cad392d6-bbb2-eba3-e42e-fcc5d636d71a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0940dba9b28df5b33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "id": "subnet-0940dba9b28df5b33",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-015ed5188023adec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "id": "subnet-015ed5188023adec7",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0bbe89ed8a9deb034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.160.0/20",
            "default_for_az": false,
            "id": "subnet-0bbe89ed8a9deb034",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0eee9e5e4b6b638ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.176.0/20",
            "default_for_az": false,
            "id": "subnet-0eee9e5e4b6b638ee",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0e8e223b44bb8b8fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.192.0/20",
            "default_for_az": false,
            "id": "subnet-0e8e223b44bb8b8fa",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-073a303c61b8e15ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.208.0/20",
            "default_for_az": false,
            "id": "subnet-073a303c61b8e15ca",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-04d52a050dade14eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "id": "subnet-04d52a050dade14eb",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0ce8f1239bce494fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "default_for_az": false,
            "id": "subnet-0ce8f1239bce494fd",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0d383cccd580f67fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "default_for_az": false,
            "id": "subnet-0d383cccd580f67fb",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-024f546cde0c64a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "default_for_az": false,
            "id": "subnet-024f546cde0c64a64",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-07fffe911b2797457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.64.0/20",
            "default_for_az": false,
            "id": "subnet-07fffe911b2797457",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0761bb0c6adad6ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.80.0/20",
            "default_for_az": false,
            "id": "subnet-0761bb0c6adad6ded",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:vpc/vpc-084f5337d8d2b82e8",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07a62f5964ef52509",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0550613068d1f60d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-084f5337d8d2b82e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cccf142379c3b483",
            "owner_id": "269733383066",
            "state": "available",
            "tags": {
              "Name": "9aug-nbprr-vpc",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09dce257c61d26edf",
            "public_dns": "ec2-23-21-96-235.compute-1.amazonaws.com",
            "public_ip": "23.21.96.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "9aug-nbprr-eip-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01cd5a83d8b6acfb7",
            "public_dns": "ec2-54-160-149-240.compute-1.amazonaws.com",
            "public_ip": "54.160.149.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "9aug-nbprr-eip-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06eb4f109b6aed6b7",
            "public_dns": "ec2-52-21-54-122.compute-1.amazonaws.com",
            "public_ip": "52.21.54.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "9aug-nbprr-eip-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04046ad10e9986aa9",
            "public_dns": "ec2-34-206-248-63.compute-1.amazonaws.com",
            "public_ip": "34.206.248.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "9aug-nbprr-eip-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-012609af93709b1e4",
            "public_dns": "ec2-52-205-244-42.compute-1.amazonaws.com",
            "public_ip": "52.205.244.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "9aug-nbprr-eip-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e3abe6aa5e523c11",
            "public_dns": "ec2-52-6-139-71.compute-1.amazonaws.com",
            "public_ip": "52.6.139.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "9aug-nbprr-eip-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d1c2cba04df838c",
            "arn": "arn:aws:ec2:us-east-1:269733383066:instance/i-0240491b0fa3d48f2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "9aug-nbprr-master-profile",
            "id": "i-0240491b0fa3d48f2",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e035ac1041544348"
              }
            ],
            "primary_network_interface_id": "eni-0e035ac1041544348",
            "private_dns": "ip-10-0-130-90.ec2.internal",
            "private_ip": "10.0.130.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-1:269733383066:key/c6f17177-ae2b-4507-af66-40772913baf9",
                "volume_id": "vol-0a3a4732744fe2572",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0940dba9b28df5b33",
            "tags": {
              "Name": "9aug-nbprr-master-0",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "9aug-nbprr-master-0-vol",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_security_group_ids": [
              "sg-07377970efd136f93"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d1c2cba04df838c",
            "arn": "arn:aws:ec2:us-east-1:269733383066:instance/i-03073eccfd2922bc9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "9aug-nbprr-master-profile",
            "id": "i-03073eccfd2922bc9",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d418e5f4b1768807"
              }
            ],
            "primary_network_interface_id": "eni-0d418e5f4b1768807",
            "private_dns": "ip-10-0-145-249.ec2.internal",
            "private_ip": "10.0.145.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-1:269733383066:key/c6f17177-ae2b-4507-af66-40772913baf9",
                "volume_id": "vol-08afc2b2dd0348285",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015ed5188023adec7",
            "tags": {
              "Name": "9aug-nbprr-master-1",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "9aug-nbprr-master-1-vol",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_security_group_ids": [
              "sg-07377970efd136f93"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d1c2cba04df838c",
            "arn": "arn:aws:ec2:us-east-1:269733383066:instance/i-099b7df31307c44ac",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "9aug-nbprr-master-profile",
            "id": "i-099b7df31307c44ac",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-09282d062e2569435"
              }
            ],
            "primary_network_interface_id": "eni-09282d062e2569435",
            "private_dns": "ip-10-0-173-48.ec2.internal",
            "private_ip": "10.0.173.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-1:269733383066:key/c6f17177-ae2b-4507-af66-40772913baf9",
                "volume_id": "vol-0ba0b5efc4fa2aab7",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbe89ed8a9deb034",
            "tags": {
              "Name": "9aug-nbprr-master-2",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "9aug-nbprr-master-2-vol",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_security_group_ids": [
              "sg-07377970efd136f93"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:internet-gateway/igw-0cb6254155a0beeab",
            "id": "igw-0cb6254155a0beeab",
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-igw",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-ext/1f41cd8de5e63ba9",
            "arn_suffix": "net/9aug-nbprr-ext/1f41cd8de5e63ba9",
            "dns_name": "9aug-nbprr-ext-1f41cd8de5e63ba9.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-ext/1f41cd8de5e63ba9",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "9aug-nbprr-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024f546cde0c64a64"
              },
              {
                "subnet_id": "subnet-04d52a050dade14eb"
              },
              {
                "subnet_id": "subnet-0761bb0c6adad6ded"
              },
              {
                "subnet_id": "subnet-07fffe911b2797457"
              },
              {
                "subnet_id": "subnet-0ce8f1239bce494fd"
              },
              {
                "subnet_id": "subnet-0d383cccd580f67fb"
              }
            ],
            "subnets": [
              "subnet-024f546cde0c64a64",
              "subnet-04d52a050dade14eb",
              "subnet-0761bb0c6adad6ded",
              "subnet-07fffe911b2797457",
              "subnet-0ce8f1239bce494fd",
              "subnet-0d383cccd580f67fb"
            ],
            "tags": {
              "Name": "9aug-nbprr-ext",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-int/60390d6643bfc9ef",
            "arn_suffix": "net/9aug-nbprr-int/60390d6643bfc9ef",
            "dns_name": "9aug-nbprr-int-60390d6643bfc9ef.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-int/60390d6643bfc9ef",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "9aug-nbprr-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015ed5188023adec7"
              },
              {
                "subnet_id": "subnet-073a303c61b8e15ca"
              },
              {
                "subnet_id": "subnet-0940dba9b28df5b33"
              },
              {
                "subnet_id": "subnet-0bbe89ed8a9deb034"
              },
              {
                "subnet_id": "subnet-0e8e223b44bb8b8fa"
              },
              {
                "subnet_id": "subnet-0eee9e5e4b6b638ee"
              }
            ],
            "subnets": [
              "subnet-015ed5188023adec7",
              "subnet-073a303c61b8e15ca",
              "subnet-0940dba9b28df5b33",
              "subnet-0bbe89ed8a9deb034",
              "subnet-0e8e223b44bb8b8fa",
              "subnet-0eee9e5e4b6b638ee"
            ],
            "tags": {
              "Name": "9aug-nbprr-int",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:listener/net/9aug-nbprr-ext/1f41cd8de5e63ba9/92e0adf2b1d785c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:listener/net/9aug-nbprr-ext/1f41cd8de5e63ba9/92e0adf2b1d785c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-ext/1f41cd8de5e63ba9",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:listener/net/9aug-nbprr-int/60390d6643bfc9ef/0cf8be796e0e5c78",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:listener/net/9aug-nbprr-int/60390d6643bfc9ef/0cf8be796e0e5c78",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-int/60390d6643bfc9ef",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:listener/net/9aug-nbprr-int/60390d6643bfc9ef/9b3ead912881f8d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:listener/net/9aug-nbprr-int/60390d6643bfc9ef/9b3ead912881f8d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:loadbalancer/net/9aug-nbprr-int/60390d6643bfc9ef",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
            "arn_suffix": "targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
            "lambda_multi_value_headers_enabled": false,
            "name": "9aug-nbprr-aext",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "9aug-nbprr-aext",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544",
            "arn_suffix": "targetgroup/9aug-nbprr-aint/343001e780679544",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544",
            "lambda_multi_value_headers_enabled": false,
            "name": "9aug-nbprr-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "9aug-nbprr-aint",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
            "arn_suffix": "targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
            "lambda_multi_value_headers_enabled": false,
            "name": "9aug-nbprr-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "9aug-nbprr-sint",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544-2021080913254525510000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544",
            "target_id": "10.0.130.90"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15-2021080913254640270000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
            "target_id": "10.0.130.90"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65-20210809132544759800000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
            "target_id": "10.0.130.90"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544-20210809132545204400000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544",
            "target_id": "10.0.145.249"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15-2021080913254564940000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
            "target_id": "10.0.145.249"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65-20210809132544759500000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
            "target_id": "10.0.145.249"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544-2021080913254599030000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aint/343001e780679544",
            "target_id": "10.0.173.48"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15-2021080913254598700000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-sint/3168a0cf12443c15",
            "target_id": "10.0.173.48"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65-2021080913254564930000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269733383066:targetgroup/9aug-nbprr-aext/5907ff90331dfb65",
            "target_id": "10.0.173.48"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0287397fde3d5e7f6",
            "original_route_table_id": "rtb-055f1e13b5ce2c55a",
            "route_table_id": "rtb-0cccf142379c3b483",
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dce257c61d26edf",
            "id": "nat-0bc9689234321975d",
            "network_interface_id": "eni-0a90aa06d753c139f",
            "private_ip": "10.0.6.62",
            "public_ip": "23.21.96.235",
            "subnet_id": "subnet-04d52a050dade14eb",
            "tags": {
              "Name": "9aug-nbprr-nat-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cd5a83d8b6acfb7",
            "id": "nat-0e7fda3b2e4d177f2",
            "network_interface_id": "eni-0fb007d872d3ff97c",
            "private_ip": "10.0.18.111",
            "public_ip": "54.160.149.240",
            "subnet_id": "subnet-0ce8f1239bce494fd",
            "tags": {
              "Name": "9aug-nbprr-nat-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06eb4f109b6aed6b7",
            "id": "nat-0aabfda28f07879ad",
            "network_interface_id": "eni-03ba13f525121140e",
            "private_ip": "10.0.34.47",
            "public_ip": "52.21.54.122",
            "subnet_id": "subnet-0d383cccd580f67fb",
            "tags": {
              "Name": "9aug-nbprr-nat-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04046ad10e9986aa9",
            "id": "nat-0e27876afaed57684",
            "network_interface_id": "eni-0df84234d42543ad2",
            "private_ip": "10.0.51.237",
            "public_ip": "34.206.248.63",
            "subnet_id": "subnet-024f546cde0c64a64",
            "tags": {
              "Name": "9aug-nbprr-nat-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012609af93709b1e4",
            "id": "nat-0761cab0b76dc0ea1",
            "network_interface_id": "eni-02b1120390a729a07",
            "private_ip": "10.0.72.25",
            "public_ip": "52.205.244.42",
            "subnet_id": "subnet-07fffe911b2797457",
            "tags": {
              "Name": "9aug-nbprr-nat-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3abe6aa5e523c11",
            "id": "nat-0fc436cb51b1379a9",
            "network_interface_id": "eni-05fbc41ee213b3f2c",
            "private_ip": "10.0.92.93",
            "public_ip": "52.6.139.71",
            "subnet_id": "subnet-0761bb0c6adad6ded",
            "tags": {
              "Name": "9aug-nbprr-nat-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0e035ac1041544348",
            "mac_address": "0a:6f:09:00:2d:d5",
            "private_dns_name": "ip-10-0-130-90.ec2.internal",
            "private_ip": "10.0.130.90",
            "private_ips": [
              "10.0.130.90"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07377970efd136f93"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0940dba9b28df5b33",
            "tags": {
              "Name": "9aug-nbprr-master-0",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0d418e5f4b1768807",
            "mac_address": "0e:af:42:bc:e3:d5",
            "private_dns_name": "ip-10-0-145-249.ec2.internal",
            "private_ip": "10.0.145.249",
            "private_ips": [
              "10.0.145.249"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07377970efd136f93"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015ed5188023adec7",
            "tags": {
              "Name": "9aug-nbprr-master-1",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-09282d062e2569435",
            "mac_address": "02:ad:b5:02:8b:8f",
            "private_dns_name": "ip-10-0-173-48.ec2.internal",
            "private_ip": "10.0.173.48",
            "private_ips": [
              "10.0.173.48"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07377970efd136f93"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbe89ed8a9deb034",
            "tags": {
              "Name": "9aug-nbprr-master-2",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb6254155a0beeab",
            "id": "r-rtb-0cccf142379c3b4831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cccf142379c3b483",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e4a30fb28b34ad01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0bc9689234321975d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e4a30fb28b34ad0",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbb00de43f6e19251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e7fda3b2e4d177f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbb00de43f6e1925",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-049d2e77662131d401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0aabfda28f07879ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049d2e77662131d40",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a113add9cc1a326d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e27876afaed57684",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a113add9cc1a326d",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05441f3ae7ae9b2831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0761cab0b76dc0ea1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05441f3ae7ae9b283",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f7a6302d25d147f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0fc436cb51b1379a9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f7a6302d25d147f",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cccf142379c3b483",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-public",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00e4a30fb28b34ad0",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbb00de43f6e1925",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049d2e77662131d40",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a113add9cc1a326d",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05441f3ae7ae9b283",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02f7a6302d25d147f",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0351aa597cce7452d",
            "route_table_id": "rtb-00e4a30fb28b34ad0",
            "subnet_id": "subnet-0940dba9b28df5b33"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090852672bfac85d7",
            "route_table_id": "rtb-0bbb00de43f6e1925",
            "subnet_id": "subnet-015ed5188023adec7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031ded54216083850",
            "route_table_id": "rtb-049d2e77662131d40",
            "subnet_id": "subnet-0bbe89ed8a9deb034"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0304cdfd94e2900bc",
            "route_table_id": "rtb-0a113add9cc1a326d",
            "subnet_id": "subnet-0eee9e5e4b6b638ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a884ce31563b5cfe",
            "route_table_id": "rtb-05441f3ae7ae9b283",
            "subnet_id": "subnet-0e8e223b44bb8b8fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064d84bc9ce2283ed",
            "route_table_id": "rtb-02f7a6302d25d147f",
            "subnet_id": "subnet-073a303c61b8e15ca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7b15f3f6094a9b",
            "route_table_id": "rtb-0cccf142379c3b483",
            "subnet_id": "subnet-04d52a050dade14eb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023ff05614a7df7a2",
            "route_table_id": "rtb-0cccf142379c3b483",
            "subnet_id": "subnet-0ce8f1239bce494fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b941cd62e00c9817",
            "route_table_id": "rtb-0cccf142379c3b483",
            "subnet_id": "subnet-0d383cccd580f67fb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdf8a3971ae49864",
            "route_table_id": "rtb-0cccf142379c3b483",
            "subnet_id": "subnet-024f546cde0c64a64"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a46b4775483cbd",
            "route_table_id": "rtb-0cccf142379c3b483",
            "subnet_id": "subnet-07fffe911b2797457"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d9150c9deacbbb",
            "route_table_id": "rtb-0cccf142379c3b483",
            "subnet_id": "subnet-0761bb0c6adad6ded"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:security-group/sg-07377970efd136f93",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07377970efd136f93",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 4500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-02f9cb95856758e17"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20210809132314036000000001",
            "name_prefix": null,
            "owner_id": "269733383066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "9aug-nbprr-master-sg",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:security-group/sg-02f9cb95856758e17",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02f9cb95856758e17",
            "ingress": [],
            "name": "terraform-20210809132314037300000002",
            "name_prefix": null,
            "owner_id": "269733383066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "9aug-nbprr-worker-sg",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-708358680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-56827675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3493130597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-2350827366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2243254440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-1457698518",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-2456865048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-3453093770",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-2296356631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-1535668585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-2998454588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-1643063106",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2099442174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2926911360",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-170572911",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3648868881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-154929927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-3664504185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-3383783300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-451379706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2227354214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1469404184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-3319293473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-378505311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1731198959",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3027767697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3278920704",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-271037054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2177218907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-159197584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-3660236782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": "sg-02f9cb95856758e17",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22623,
            "id": "sgrule-3200644498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07377970efd136f93",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1106192448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-171343291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3647050693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-1322901174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2643341512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-428020633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-2816693559",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-1958001481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-2043957026",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3058595808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1696176542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3242605169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-303158287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1895943918",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2723553424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-2860753244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2464975719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1102800153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-917710984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3856975606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4057256029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-3255938958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-289817072",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02f9cb95856758e17",
            "self": false,
            "source_security_group_id": "sg-07377970efd136f93",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0940dba9b28df5b33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "id": "subnet-0940dba9b28df5b33",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-015ed5188023adec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-015ed5188023adec7",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0bbe89ed8a9deb034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-0bbe89ed8a9deb034",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0eee9e5e4b6b638ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.176.0/20",
            "id": "subnet-0eee9e5e4b6b638ee",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0e8e223b44bb8b8fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.192.0/20",
            "id": "subnet-0e8e223b44bb8b8fa",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-073a303c61b8e15ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.208.0/20",
            "id": "subnet-073a303c61b8e15ca",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-private-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-04d52a050dade14eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-04d52a050dade14eb",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1a",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0ce8f1239bce494fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0ce8f1239bce494fd",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1b",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0d383cccd580f67fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0d383cccd580f67fb",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1c",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-024f546cde0c64a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-024f546cde0c64a64",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1d",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-07fffe911b2797457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-07fffe911b2797457",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1e",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:subnet/subnet-0761bb0c6adad6ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-0761bb0c6adad6ded",
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-public-us-east-1f",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269733383066:vpc/vpc-084f5337d8d2b82e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c52488d587e6e0d4",
            "default_route_table_id": "rtb-0cccf142379c3b483",
            "default_security_group_id": "sg-03dac2a30126bad70",
            "dhcp_options_id": "dopt-0550613068d1f60d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-084f5337d8d2b82e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cccf142379c3b483",
            "owner_id": "269733383066",
            "tags": {
              "Name": "9aug-nbprr-vpc",
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "id": "vpce-0d2b8ac4d6fc94fb8",
            "owner_id": "269733383066",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00e4a30fb28b34ad0",
              "rtb-02f7a6302d25d147f",
              "rtb-049d2e77662131d40",
              "rtb-05441f3ae7ae9b283",
              "rtb-0a113add9cc1a326d",
              "rtb-0bbb00de43f6e1925",
              "rtb-0cccf142379c3b483"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/9aug-nbprr": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-084f5337d8d2b82e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    }
  ]
}